[package]
name = "car-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "0.7.0" , features = [
  "macros",
  "debug-print",
  "runtime-actix-native-tls",
  "sqlx-mysql",
]}
sea-schema = { version = "^0.7.0", default-features = false, features = [ "migration", "debug-print" ] }