[package]
name = "car-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
fast_log="1.3"
tokio = { version = "1", features = ["full"] }
rbatis = { version = "3.1", default-features = false, features = ["mysql", "runtime-tokio-rustls"] }